--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,81 @@
   text-decoration: none;
   box-sizing: border-box;
 }
-body{
-    background-color: #06050a;
+body {
+  background-color: #06050a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.pumpkin {
+  background-color: #e1631d;
+  height: 250px;
+  width: 300px;
+  position: relative;
+  border-radius: 50%;
+  box-shadow: 20px 5px 20px 10px #d65417, -20px -5px 20px 10px #d65417,
+    40px 10px 100px 20px #a42e08, -40px -2px 100px 20px #a42e08,
+    inset 4px 4px 20px 4px #fddb9a, inset -4px -4px 20px 8px #bd1c0f;
+}
+.pumpkin-eye,
+.pumpkin-mouth,
+.pumpkin-nose,
+.pumpkin-teeth {
+  position: absolute;
+  background-color: #30152a;
+}
+.pumpkin-eye {
+  height: 50px;
+  width: 70px;
+  top: 20%;
+}
+.pumpkin-eye-1 {
+  left: 20%;
+  border-radius: 42% 58% 0% 100% / 68% 89% 11% 32%;
+  box-shadow: inset 10px 5px #7f2524, inset 10px -5px #7f2524;
+}
+/* I used fancy border lines for the pumpkin eyes https://9elements.github.io/fancy-border-radius/ */
+/* https://github.com/9elements/fancy-border-radius */
+.pumpkin-eye-2 {
+  right: 20%;
+  border-radius: 69% 31% 100% 0% / 87% 71% 29% 13%;
+  box-shadow: inset -10px -5px #7f2524, inset -10px -5px #7f2524;
+}
+.pumpkin-nose {
+  top: 40%;
+  right: 50%;
+  height: 40px;
+  width: 40px;
+
+  border-radius: 5px;
+  transform: translateX(50%);
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+}
+.pumpkin-mouth {
+  bottom: 30px;
+  height: 60px;
+  width: 180px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-bottom-right-radius: 300px 200px;
+  border-bottom-left-radius: 300px 200px;
+}
+.pumpkin-teeth {
+  background-color: #e1631d;
+  height: 20px;
+  width: 25px;
+  bottom: 45px;
+  border-radius: 5px;
+  right: 70%;
+}
+.pumpkin-teeth-1 {
+  right: 20%;
+}
+.pumpkin-teeth-3 {
+  bottom: 2px;
+  right: 20%;
+}
+.pumpkin-teeth-4 {
+  bottom: 2px;
 }
