--- a/styles/index.css
+++ b/styles/index.css
@@ -58,21 +58,26 @@ h1 {
 .pumpkin-eye-1 {
   left: 20%;
   border-radius: 42% 58% 0% 100% / 68% 89% 11% 32%;
-  box-shadow: inset 10px 5px #7f2524, inset 10px -5px #7f2524;
+  box-shadow: -2px -2px 30px #feb960, 2px 2px 30px #feb960,
+    inset 10px 5px #7f2524, inset 10px -5px #7f2524, inset 12px -6px 5px #4b0b0d,
+    inset 12px 6px 5px #4b0b0d;
 }
 /* I used fancy border lines for the pumpkin eyes https://9elements.github.io/fancy-border-radius/ */
 /* https://github.com/9elements/fancy-border-radius */
 .pumpkin-eye-2 {
   right: 20%;
   border-radius: 69% 31% 100% 0% / 87% 71% 29% 13%;
-  box-shadow: inset -10px -5px #7f2524, inset -10px -5px #7f2524;
+  box-shadow: -2px -2px 30px #feb960, 2px 2px 30px #feb960,
+    inset -10px -5px #7f2524, inset -10px -5px #7f2524,
+    inset -12px -6px 5px #4b0b0d, inset -12px -6px 5px #4b0b0d;
 }
 .pumpkin-nose {
   top: 40%;
   right: 50%;
   height: 40px;
   width: 40px;
-
+  box-shadow: -2px -2px 30px #feb960, 2px 2px 30px #feb960,
+    inset -4px -2px #7f2524, inset -6px -3px 5px #4b0b0d;
   border-radius: 5px;
   transform: translateX(50%);
   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
@@ -85,6 +90,7 @@ h1 {
   transform: translateX(-50%);
   border-bottom-right-radius: 300px 200px;
   border-bottom-left-radius: 300px 200px;
+  box-shadow: inset 5px 5px #7f2524, inset -5px -5px #7f2524;
 }
 .pumpkin-teeth {
   background-color: #e1631d;
@@ -96,13 +102,19 @@ h1 {
 }
 .pumpkin-teeth-1 {
   right: 20%;
+  box-shadow: 2px 2px #7f2524;
+}
+.pumpkin-teeth-2 {
+  box-shadow: 2px 2px #7f2524;
 }
 .pumpkin-teeth-3 {
   bottom: 2px;
   right: 20%;
+  box-shadow: -2px -2px #7f2524;
 }
 .pumpkin-teeth-4 {
   bottom: 2px;
+  box-shadow: 2px -2px #7f2524;
 }
 
 /* Images styles */
