--- a/styles/index.css
+++ b/styles/index.css
@@ -123,56 +123,50 @@ img {
   backface-visibility: hidden;
 }
 
-.bat,
-.basket,
-.candy,
-.skeleton {
-  top: 10%;
-  transform: translateY(-50%);
-}
-
 .hand,
 .basket,
 .skeleton,
 .bat {
   z-index: 100;
-  left: 45%;
 }
 .basket {
+  left: 30%;
+  top: -48%;
   animation: basket-out ease-in-out 3s, float infinite linear 5.2s;
 }
 .hand {
-  bottom: 10%;
+  bottom: -50%;
+  left: 40%;
   animation: hand-out ease-in-out 3s, float infinite linear 5.2s;
 }
 .bat {
-  left: 30%;
-  top: 40%;
+  left: -40%;
+  top: 20%;
   animation: bat-out ease-in-out 3s, float infinite linear 5.2s;
 }
 .candy {
-  top: 25%;
-  right: 30%;
+  top: -20%;
+  right: -30%;
   animation: candy-out ease-in-out 3s, float infinite linear 3s;
 }
 .cat {
-  right: 30%;
-  bottom: 10%;
+  right: -30%;
+  bottom: -40%;
   animation: cat-out ease-in-out 3s, float infinite linear 5s;
 }
 .witch {
-  right: 30%;
-  bottom: 40%;
+  right: -30%;
+  bottom: 30%;
   animation: witch-out ease-in-out 3s, float infinite linear 6s;
 }
 .ghost {
-  left: 30%;
-  bottom: 20%;
+  left: -30%;
+  bottom: -20%;
   animation: ghost-out ease-in-out 3s, float infinite linear 4.4s;
 }
 .skeleton {
-  left: 30%;
-  top: 20%;
+  left: -30%;
+  top: -40%;
   animation: skeleton-out ease-in-out 3s, float infinite linear 3.2s;
 }
 footer {
@@ -212,130 +206,202 @@ footer a {
     transform: translateY(0px);
   }
 }
-
+@keyframes smile {
+  0% {
+    transform: translateY(0px);
+  }
+  25% {
+    transform: translateY(5px);
+  }
+  50% {
+    transform: translateY(0px);
+  }
+  75% {
+    transform: translateY(5px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
 @keyframes skeleton-out {
   0% {
     left: 44%;
     top: 40%;
-    z-index: 0;
+    opacity: 0.1;
   }
   80% {
-    z-index: 0;
-    left: 25%;
-    top: 20%;
+    left: -35%;
+    top: -45%;
+    opacity: 0.5;
   }
   100% {
-    left: 30%;
-    top: 20%;
-    z-index: 100;
+    left: -30%;
+    top: -40%;
+    opacity: 1;
   }
 }
 @keyframes candy-out {
   0% {
-    z-index: 0;
+    opacity: 0.1;
     right: 40%;
     top: 40%;
   }
   80% {
-    z-index: 0;
-    right: 25%;
-    top: 25%;
+    opacity: 0.5;
+    right: -35%;
+    top: -25%;
   }
   100% {
-    top: 25%;
-    right: 30%;
+    opacity: 1;
+    top: -20%;
+    right: -30%;
   }
 }
 @keyframes cat-out {
   0% {
-    z-index: 0;
+    opacity: 0.1;
     right: 40%;
     bottom: 40%;
   }
   80% {
-    z-index: 0;
-    right: 25%;
-    bottom: 5%;
+    opacity: 0.5;
+    right: -35%;
+    bottom: -45%;
   }
   100% {
-    right: 30%;
-    bottom: 10%;
+    opacity: 1;
+    right: -30%;
+    bottom: -40%;
   }
 }
 @keyframes bat-out {
   0% {
+    opacity: 0.1;
     left: 44%;
     top: 40%;
-    z-index: 0;
   }
   80% {
-    z-index: 0;
-    left: 25%;
-    top: 40%;
+    opacity: 0.5;
+    left: -45%;
+    top: 15%;
   }
   100% {
-    left: 30%;
-    top: 40%;
-    z-index: 100;
+    opacity: 1;
+    left: -40%;
+    top: 20%;
   }
 }
 @keyframes basket-out {
   0% {
+    opacity: 0.1;
     top: 40%;
-    z-index: 0;
   }
   80% {
-    z-index: 0;
-    top: 5%;
+    opacity: 0.5;
+    top: -53%;
   }
   100% {
-    top: 10%;
-    z-index: 100;
+    opacity: 1;
+    top: -48%;
   }
 }
 @keyframes ghost-out {
   0% {
-    z-index: 0;
+    opacity: 0.1;
     left: 44%;
     bottom: 40%;
   }
   80% {
-    z-index: 0;
-    left: 25%;
-    bottom: 20%;
+    opacity: 0.5;
+    left: -35%;
+    bottom: -25%;
   }
   100% {
-    left: 30%;
-    bottom: 20%;
+    opacity: 1;
+    left: -30%;
+    bottom: -20%;
   }
 }
 @keyframes witch-out {
   0% {
-    z-index: 0;
+    opacity: 0.1;
+
     right: 40%;
     bottom: 40%;
   }
   80% {
-    z-index: 0;
-    right: 25%;
-    bottom: 40%;
+    opacity: 0.5;
+    right: -35%;
+    bottom: 25%;
   }
   100% {
-    right: 30%;
-    bottom: 40%;
+    opacity: 1;
+    right: -30%;
+    bottom: 30%;
   }
 }
 @keyframes hand-out {
   0% {
+    opacity: 0.1;
     bottom: 40%;
-    z-index: 0;
   }
   80% {
-    z-index: 0;
-    bottom: 5%;
+    opacity: 0.5;
+    bottom: -55%;
   }
   100% {
-    bottom: 10%;
-    z-index: 100;
+    opacity: 1;
+    bottom: -50%;
+  }
+}
+@media (max-width: 480px) {
+  h1 {
+    font-size: 64px;
+  }
+  .happy {
+    top: 10px;
+    left: 5px;
+  }
+  .halloween {
+    top: 10px;
+    right: -7px;
+  }
+  .skeleton {
+    left: -15%;
+    width: 100px;
+    height: 94px;
+  }
+  .candy {
+    right: -16%;
+  }
+  .bat {
+    left: -30px;
+  }
+  .ghost {
+    left: -15%;
+  }
+  .cat {
+    right: -16%;
+  }
+  .witch {
+    right: -16%;
+  }
+
+  .hand,
+  .basket,
+  .skeleton,
+  .bat,
+  .ghost,
+  .candy,
+  .witch,
+  .cat {
+    animation: float infinite linear 4.4s;
+  }
+}
+@media (min-width: 481px) and (max-width: 920px) {
+  .happy,
+  .halloween {
+    top: 10%;
+    font-size: 84px;
   }
 }
